# xgos

./: .gitignore  CMakeLists.txt  Makefile  README.md  ROADMAP.md  bochs_config  build_iso.sh  debug.sh  linker.ld  run.sh
cmake/: Toolchain-i686-elf.cmake  Toolchain-x86_64-elf.cmake
docs/: PREREQUISITES.md
src/: boot.asm  console.cpp  console.h  graphics.cpp  graphics.h  graphics_demo.cpp  graphics_demo.h  init.cpp  kernel.cpp  math.cpp  math.h  memory.cpp  memory.h  paging.cpp  paging.h
src/bootloader/: Makefile  linker.ld  main.asm  main.c  stdint.h
src/bootloader/stage1/: boot.asm
src/bootloader/stage2/: Makefile  linker.ld  main.asm  main.c  stdio.c  stdio.h  x86.asm  x86.h
src/kernel/: Makefile  kernel.cpp  kernel.h  main.asm  vga.cpp  vga.hpp
src/tools/fat/: fat.c
